# Kassenzettel-Scanner

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.superpowers/brainstorm/852-1773471164/: .server-stopped  color-scheme.html
docs/superpowers/plans/: 2026-03-14-kassenzettel-scanner-mvp.md
docs/superpowers/specs/: 2026-03-14-kassenzettel-scanner-design.md
infos/: PRD_KassenzettelScanner.md
src/: App.tsx  Router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src-tauri/src/commands/: analyze.rs  categories.rs  dashboard.rs  export.rs  mockdata.rs  mod.rs  pricechart.rs  receipts.rs  scanner.rs  settings.rs  stores.rs
src-tauri/src/db/: mod.rs  schema.rs  seed.rs
src/components/: ErrorBoundary.tsx
src/components/charts/: Dashboard.tsx  PriceChart.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  ThemeProvider.tsx
src/components/onboarding/: ModelDownload.tsx
src/components/receipts/: ReceiptDetail.tsx  ReceiptList.tsx
src/components/scan/: CorrectionTable.tsx  DropZone.tsx  ScanPage.tsx  ScanProgress.tsx
src/hooks/: useAnalyze.ts  useCategories.ts  useProducts.ts  useReceipts.ts  useSettings.ts  useSidecar.ts  useStores.ts  useTheme.ts
src/lib/: tauri-commands.ts  utils.ts
src/store/: categoryStore.ts  receiptStore.ts  settingsStore.ts  sidecarStore.ts  storeStore.ts
src/types/: category.ts  product.ts  receipt.ts  settings.ts  store.ts
(+1 files in other folders)
